cluster/minio/manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dev-ingress
  namespace: minio-dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "minio-dev.k8s.jeromeswannack.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-dev-service
            port:
              number: 9000
  - host: "minio-dev-console.k8s.jeromeswannack.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-dev-service
            port:
              number: 9090
